apps/infisical/k8s/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infisical
  namespace: infisical
spec:
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: infisical
  template:
    metadata:
      labels:
        app: infisical
    spec:
      containers:
        - name: infisical
          image: "infisical/infisical:v0.162.20@sha256:634d2f934eecf5b455500b6c04e99bd75a687706df7b046697fdad849587a6df"
          ports:
            - name: http
              containerPort: 8080
            - name: metrics
              containerPort: 9464
          startupProbe:
            httpGet:
              path: /api/status
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 36
          livenessProbe:
            httpGet:
              path: /api/status
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/status
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
