apps/infisical/k8s/redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infisical-redis
  namespace: infisical
spec:
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: infisical-redis
  template:
    metadata:
      labels:
        app: infisical-redis
    spec:
      containers:
        - name: redis
          image: "redis:7-alpine@sha256:e7723ff73d963f5cc6d9c4643ea3d989527a402a319239054e9472a7fb9219a2"
          ports:
            - name: redis
              containerPort: 6379
          startupProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            periodSeconds: 30
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            periodSeconds: 10
          securityContext:
            runAsUser: 999
            runAsGroup: 999
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          hostPath:
            path: /storage/apps/infisical/redis
            type: Directory
