apps/infisical/k8s/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infisical-redis
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: infisical-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
