apps/infisical/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infisical
  namespace: infisical
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - infisical.biplane.v6.rocks
    - infisical.biplane.casa
  rules:
    - backendRefs:
        - name: infisical
          port: 80
